# fastapi-vue-backbone

./: .env.example.docker  .gitignore  app.dockerfile  backend.dockerfile  db_entrypoint.sh  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: fastapi-check-migrations.yml  fastapi-lint-and-test.yml  vue-lint-and-test.yaml
classic-version/: .env.example  app.dockerfile  docker-compose.yml  openapi.json  start
classic-version/.devcontainer/: devcontainer.json
classic-version/.github/workflows/: fastapi-check-migrations.yml
classic-version/fastapi/: .gitignore  pyproject.toml
classic-version/fastapi/alembic/: env.py
classic-version/fastapi/alembic/versions/: 0af3362e5fe8_add_first_name_and_last_name_to_user.py  27b5472f507e_init_project.py
classic-version/fastapi/app/: conftest.py  main.py
classic-version/fastapi/app/auth/: admin.py  api.py  deps.py  exceptions.py  models.py
classic-version/fastapi/app/auth/tests/: test_api.py
classic-version/fastapi/app/auth/utils/: email.py
classic-version/fastapi/app/common/: exceptions.py  models.py  search.py  storage.py
classic-version/fastapi/app/common/test_utils/: authz.py  db_utils.py  utils.py
classic-version/fastapi/app/core/: admin.py  config.py
classic-version/fastapi/app/libs/inertia/: settings.py
classic-version/fastapi/app/user/: admin.py  api_v1.py  deps.py  exceptions.py  models.py
classic-version/fastapi/app/user/tests/: test_api_v1.py
classic-version/fastapi/app/webapp/: models.py
classic-version/fastapi/authorization/: model.fga
classic-version/fastapi/commands/: admin.py  authz.py  docker.py  main.py  options.py  run.py  setup.py  shell.py
classic-version/fastapi/commands/search_commands/: seeds.py  update.py
classic-version/fastapi/docs/: auth.md
classic-version/vue/: .eslintrc.cjs  openapi.json  package.json  vite.config.ts
classic-version/vue/src/: App.vue  AppWrapper.vue  i18n.ts  main.ts  messageProps.ts  router.ts
classic-version/vue/src/Pages/: AppView.vue  HomeView.vue
classic-version/vue/src/Pages/auth/: LoginView.vue  RecoverPasswordView.vue  ResetPasswordView.vue  SignupView.vue
classic-version/vue/src/api/: index.ts  models.ts  schemas.gen.ts  schemas.ts  services.gen.ts  services.ts  types.gen.ts
classic-version/vue/src/api/core/: OpenAPI.ts
classic-version/vue/src/assets/: index.css
classic-version/vue/src/components/: ClientHeader.vue
classic-version/vue/src/components/site-settings/: SiteSettings.vue
classic-version/vue/src/components/user-settings/: EditProfileDialog.vue  UserSettings.vue
classic-version/vue/src/composables/: useSafeRequest.ts
classic-version/vue/src/forms/auth/: LoginForm.vue  RecoverPasswordForm.vue  ResetPasswordForm.vue  SignupForm.vue
classic-version/vue/src/forms/components/: InputField.vue  PasswordField.vue
classic-version/vue/src/forms/composables/: useFormField.ts
classic-version/vue/src/forms/user/: EditPasswordForm.vue  EditProfileForm.vue
classic-version/vue/src/i18n/: en.ts  fr.ts  types.ts
classic-version/vue/src/layouts/: LoggedInLayout.vue
classic-version/vue/src/stores/: currentUser.ts
fastapi/: pyproject.toml  requirements.txt
fastapi/.devcontainer/: devcontainer.json
fastapi/alembic/: script.py.mako
fastapi/app/: inertia_router.py  main.py
fastapi/app/auth/: api.py  deps.py  exceptions.py
fastapi/app/auth/tests/: factory.py  test_api.py
fastapi/app/auth/utils/: email.py  reset_password_template.html
fastapi/app/common/: exceptions.py  fga.py  repository.py
fastapi/app/common/test_utils/: test_db_is_cleaned_between_tests.py  utils.py
fastapi/app/core/: config.py  sync_db.py
fastapi/app/user/: api_v1.py  deps.py  fga.py  models.py  repository.py  search.py
fastapi/app/user/tests/: factory.py  test_api_v1.py
fastapi/authorization/: store.fga.yaml
fastapi/commands/: admin.py  print.py  setup.py
fastapi/docs/: authz.md  testing.md
inertia-version/: .env.example  .env.example.docker  README.md  app.dockerfile  docker-compose.yml  openapi.json  start
inertia-version/.devcontainer/: devcontainer.json
inertia-version/.github/workflows/: fastapi-lint-and-test.yml
inertia-version/fastapi/: README.md  pyproject.toml  requirements.dev.in  requirements.in  requirements.txt
inertia-version/fastapi/alembic/versions/: 13b57e060a12_init_project.py
inertia-version/fastapi/app/: api_v1.py  conftest.py  main.py
inertia-version/fastapi/app/auth/: api.py  deps.py
inertia-version/fastapi/app/auth/tests/: test_api.py
inertia-version/fastapi/app/auth/utils/: auth.py  email.py  password.py
inertia-version/fastapi/app/common/: exceptions.py  fga.py
inertia-version/fastapi/app/common/test_utils/: authz.py  factory.py  search.py
inertia-version/fastapi/app/core/: config.py
inertia-version/fastapi/app/libs/inertia/: config.py  inertia.py  renderer.py
inertia-version/fastapi/app/user/: admin.py  api_v1.py  deps.py  models.py  repository.py
inertia-version/fastapi/app/user/tests/: test_api_v1.py
inertia-version/fastapi/app/webapp/: api.py  models.py
inertia-version/fastapi/authorization/: model.json
inertia-version/fastapi/commands/: admin.py  authz.py  docker.py  main.py  processes.py  run.py  setup.py  utils.py
inertia-version/fastapi/commands/search_commands/: seeds.py  update.py
inertia-version/vue/: package.json  vite.config.ts  vitest.config.ts
inertia-version/vue/src/: AppWrapper.vue  main.ts  ssr.ts
inertia-version/vue/src/Pages/: AppView.vue
inertia-version/vue/src/Pages/auth/: LoginView.vue  RecoverPasswordView.vue  ResetPasswordView.vue  SignupView.vue
inertia-version/vue/src/api/: models.ts  schemas.ts
inertia-version/vue/src/api/core/: request.ts  types.ts
inertia-version/vue/src/assets/: reset.css
inertia-version/vue/src/components/: ClientHeader.vue
inertia-version/vue/src/composables/: useServerMessages.ts
inertia-version/vue/src/i18n/: en.ts  index.ts
inertia-version/vue/src/layouts/: ClientLayout.vue
vue/: package-lock.json  package.json
vue/src/: main.ts
vue/src/Pages/: AboutView.vue  HomeView.vue
(+20 files in other folders)
