[project]
name = "backbone"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    'conftest\.py$',
    '/tests/',
    '/test_utils/',
]

    [[tool.mypy.overrides]]
    module = ["app.*.api", "app.*.api_v1", "app.*.api_v2"]
    disable_error_code = ["no-untyped-def"]  # We don't specify return types for routes as we use response_model

    [[tool.mypy.overrides]]
    module = ["app.*.inertia_router"]
    disable_error_code = ["misc", "no-untyped-def"]  # Untyped decorator makes function "index" untyped + above

[tool.poe.tasks]
run_services = "python3 -m commands.docker up"
run = ["run_services", "runapp"]
runall = "python3 -m commands.docker upall"
rundc = "poe runapp --host 0.0.0.0"

migration = { cmd = "alembic revision --autogenerate -m", help = "Create a new migration. Expects a message argument" }
migrate = "alembic upgrade head"
rollback = "alembic downgrade -1"
shell = "python3 -i -m commands.shell"


mypy = 'mypy app/'
ruff_lint_check = "ruff check ."
compile = "uv pip freeze | uv pip compile - -o requirements.txt"
sync = "uv pip sync requirements.txt"

format = "ruff format ."
lint = "ruff check . --fix"
format_check = "ruff format . --check"
lint_check = ["mypy", "ruff_lint_check"]
ci_check = ["format_check", "lint_check"]
pc = ["format", "lint", "mypy", "compile"]


[tool.poe.tasks.runapp]
cmd = "uvicorn app.main:app --reload --host $host --port $port"

    [tool.poe.tasks.runapp.args.host]
    help = "Host on which to run the service"
    default = "127.0.0.1"

    [tool.poe.tasks.runapp.args.port]
    help = "Port on which to run the service"
    default = "8000"

[tool.poe.tasks.test]
cmd = "pytest -n $num_workers app/$target"

    [tool.poe.tasks.test.args.num_workers]
    help = "Number of workers to use for parallel testing"
    default = "auto"
    options = ["-n", "--num-workers"]


    [tool.poe.tasks.test.args.target]
    help = "The target to run tests on, from app/"
    positional = true
    default = ""

[tool.poe.tasks.cmd]
cmd = "python3 -m commands.$command $subcommand"
help = "Run a command. Pass --help for more information. Default command is main, the interactive menu"

    [tool.poe.tasks.cmd.args.command]
    help = "The command to run. Options are: main, docker, admin, data, search"
    positional = true
    default = "main"

    [tool.poe.tasks.cmd.args.subcommand]
    help = "The subcommand to run. Pass `-- --help` for more information"
    positional = true
    default = ""